# ICE2

./: pyproject.toml  requirements.txt
ice/: analysis.py
ice/classes/: pair_alignment.py  sanger_analysis.py
synthego_ice/: analysis.py
synthego_ice/ice/: analysis.py
